[package]
name = "imageproc"
version = "0.26.0"
authors = ["theotherphil"]
rust-version = "1.87.0"
edition = "2024"
license = "MIT"
description = "Image processing operations"
readme = "README.md"
repository = "https://github.com/image-rs/imageproc.git"
homepage = "https://github.com/image-rs/imageproc"
exclude = [".github/*", "examples/*", "tests/*"]

[features]
default = ["rayon", "image/default", "text", "fft"]
display-window = ["sdl2"]
rayon = ["dep:rayon", "image/rayon"]
fft = ["dep:rustdct"]
text = ["dep:ab_glyph"]

[dependencies]
ab_glyph = { version = "=0.2.32", default-features = false, features = ["std"], optional = true}
approx = { version = "=0.5.1", default-features = false }
image = { version = "=0.25.9", default-features = false }
itertools = { version = "=0.14.0", default-features = false, features = [
    "use_std",
] }
nalgebra = { version = "=0.34.1", default-features = false, features = ["std"] }
num = { version = "=0.4.3", default-features = false }
rand = { version = "=0.10.0", default-features = false, features = [
    "thread_rng",
    "sys_rng",
] }
rand_distr = { version = "=0.6.0", default-features = false }
rayon = { version = "=1.11.0", optional = true, default-features = false }
sdl2 = { version = "=0.38.0", optional = true, default-features = false, features = [
    "bundled",
] }
katexit = { version = "=0.1.5", optional = true, default-features = false }
rustdct = { version = "=0.7.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "=0.4.1", default-features = false, features = ["wasm_js"] }

[dev-dependencies]
assert_approx_eq = "=1.1.0"
proptest = "=1.10.0"
wasm-bindgen-test = "=0.3.63"

[package.metadata.docs.rs]
# See https://github.com/image-rs/imageproc/issues/358
# all-features = true
features = ["katexit"]

[profile.release]
opt-level = 3
debug = true

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
